--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reract-tdd-rehersal",
+  "name": "react-tdd-rehersal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
